--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,9 @@
               "src/favicon.ico"
             ],
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.scss",
               "node_modules/roboto-fontface/css/roboto/roboto-fontface.css"
             ],
@@ -78,6 +81,9 @@
               "node_modules/materialize-css/dist/js/materialize.js"
             ],
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.scss",
               "node_modules/roboto-fontface/css/roboto/roboto-fontface.css"
             ],
