--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@angular/core": "6.1.2",
     "@angular/forms": "6.1.2",
     "@angular/http": "6.1.2",
-    "@angular/material": "^6.4.3",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "6.1.2",
     "@angular/platform-browser-dynamic": "6.1.2",
     "@angular/router": "6.1.2",
+    "@types/angular-material": "^1.1.59",
     "angular": "^1.7.3",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
     "materialize-css": "^0.100.2",
     "roboto-fontface": "^0.9.0",
     "rxjs": "^6.2.2",
@@ -37,6 +39,7 @@
     "@angular/cli": "6.1.3",
     "@angular/compiler-cli": "6.1.2",
     "@angular/language-service": "6.1.2",
+    "@types/crypto-js": "^3.1.43",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.116",
